--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>LD35</title>
     <script type="text/javascript">
-        window.location.replace("/LD35/release/index.html");
+        window.location.replace("/LD35/dist/index.html");
     </script>
   </head>
   <body>
